--- a/templates/admin_panel/sidebar.html
+++ b/templates/admin_panel/sidebar.html
@@ -26,6 +26,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link {% if request.resolver_match.url_name == 'enrollment_list' or request.resolver_match.url_name == 'add_enrollment' %}active{% endif %}" 
+                   href="{% url 'admin_panel:enrollment_list' %}">
+                    <i class="bi bi-person-plus"></i> Enrollments
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link {% if request.resolver_match.url_name == 'material_list' %}active{% endif %}" 
                    href="{% url 'admin_panel:material_list' %}">
                     <i class="bi bi-file-earmark-text"></i> Materials
@@ -59,6 +65,11 @@
                 <a class="nav-link {% if request.resolver_match.url_name == 'about' %}active{% endif %}" 
                    href="{% url 'admin_panel:about' %}">
                     <i class="bi bi-info-circle"></i> About
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">
+                    <i class="bi bi-box-arrow-right"></i> Logout
                 </a>
             </li>
         </ul>
